# cal-scraper

./: .gitignore  Containerfile  LICENSE  README.md  cal-scraper.container  cal-scraper.env.example  cal-scraper.timer  copilot-instructions.md  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-date-parser/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-web-scraping/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cal_scraper/: __init__.py  cli.py  date_parser.py  detail_parser.py  extractor.py  http_client.py  ics_generator.py  index.html.template  index_generator.py  models.py  translation_cache.py  translator.py
cal_scraper/sites/: __init__.py
tests/: test_cli.py  test_date_parser.py  test_detail_parser.py  test_extractor.py  test_fetcher.py  test_http_client.py  test_ics_generator.py  test_index_generator.py
tests/fixtures/: event_page.html
tests/test_hvezdarna/: test_extractor.py  test_fetcher.py
tests/test_ikea_brno/: test_classifier.py  test_fetcher.py  test_scrape.py
tests/test_moravska_galerie/: test_date_parser.py  test_detail_parser.py  test_extractor.py  test_fetcher.py
tests/test_translation_cache/: test_translation_cache.py
tests/test_translator/: test_translator.py
tests/test_vida/: test_extractor.py  test_fetcher.py  test_scrape.py
(+28 files in other folders)
